fixed visual bug on content text overflow

--- a/landing/src/css/content.css
+++ b/landing/src/css/content.css
@@ -10,8 +10,6 @@
     cursor: pointer;
     display: flex;
     flex-direction: column;
-    max-height: 100vw;
-
     --spacing: 30px;
 
     --image-width: 100%;
@@ -27,8 +25,10 @@
     align-items: center;
     justify-content: center;
     overflow: hidden;
+    max-height: 100vw;
 
     width: var(--image-width);
+    order: 2;
 }
 
 .content-image > img {
@@ -41,12 +41,13 @@
 }
 
 .content-text {
+    order: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
 
     width: var(--text-width);
-
+    box-sizing: border-box;
     --padding: 20px;
     padding: var(--padding);
     padding-bottom: calc(var(--spacing) + var(--padding));
